# kani-multimodal-core

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml  pythonpublish.yml
docs/: api_reference.rst  conf.py
docs/_extra/: robots.txt
kani/ext/multimodal_core/: __init__.py  audio.py  base.py  cli.py  exceptions.py  image.py  utils.py  video.py
tests/: test_audio.py  test_binary_file.py  test_image.py  test_video.py  utils.py
