[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kani-multimodal-core"
dynamic = ["version"]
authors = [
    { name = "Andrew Zhu", email = "andrew@zhu.codes" },
]
description = "Core shared libraries for multimodal Kani extensions."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "kani<2.0.0",
    "aiohttp>=3.0.0,<4.0.0",
    "numpy>=2.0.0,<3.0.0",
    "Pillow>=9.0.0",
    "pydub>=0.20.0,<1.0.0",
    "audioop-lts>=0.2.1; python_version >= '3.13'",
]

[project.urls]
"Homepage" = "https://github.com/zhudotexe/kani-multimodal-core"
"Bug Tracker" = "https://github.com/zhudotexe/kani-multimodal-core/issues"

[tool.hatch]
version.path = "kani/ext/multimodal_core/_version.py"

# This tells the build system that the kani directory contains a namespace package
# Don't touch it unless you know what you're doing!
[tool.hatch.build.targets.wheel]
packages = ["kani"]

[tool.black]
line-length = 120
preview = true

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 120
known_third_party = ["kani"]
no_lines_before = "LOCALFOLDER"
reverse_relative = true
combine_as_imports = true
case_sensitive = true
